2010-01-21  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Check for correct version of libgpepimc.

2010-01-19  Graham Cobb  <g+770@cobb.uk.net>

	* Makefile.am (gpe_contacts_SOURCES): Remove pimc-ui.c,.h

	* editing.c (edit_window): Use gpe_pim_categories_list_window for consistency with
	other applications
	(edit_person): Use gpe_pim_categories_reset_window
	(on_edit_save_clicked): Use gpe_pim_categories_from_window
	
	* pimc-ui.c, pimc-ui.h: Remove pimc-ui.c,.h

2009-10-04  Graham Cobb  <g+770@cobb.uk.net>

	* main-hildon.c (create_app_menu): Create a real Fremantle menu.
	Make sure dialog boxes are parented by the main window.

2009-09-14  Graham Cobb  <g+770@cobb.uk.net>

	* main-hildon.c (create_main): Change Main window name to List on Maemo 4 and earlier
	and GPE Contacts on Fremantle as Fremantle does not display the application name
	(create_app_menu): Remove View submenu and Fullscreen and Toolbar options

2009-09-12  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac (MAEMO5): set up MAEMO5 condition for automake

	* hildon/Makefile.am (gpe-contacts.png): Conditionalise application icon size

2009-09-09  Graham Cobb  <g+770@cobb.uk.net>

	* main-hildon.c: Port category selection to a hildon selector.
	Modify "find" entry handling to work with Fremantle focus style

	* configure.ac: Add maemo-version checking

2009-09-02  Graham Cobb  <g+770@cobb.uk.net>

	* main-hildon.c: Use stock toolbar icons so they work on fremantle
	(create_app_menu): Add Find to menu

2009-04-15 Ned Ludd  <solar@gentoo.org>
	* gpe-base/gpe-contacts: Makefile.am 
	* Icon Dir Unification. /usr/share/gpe/pixmaps/ -> /usr/share/pixmaps/gpe/
	* Targeted for gpe-3.0 release.

2008-12-10  Graham Cobb  <g+770@cobb.uk.net>

	* gpe-contacts.desktop.in.in (_Name): Undo change in non-hildon file

	* hildon/gpe-contacts.desktop.in.in (_Name): Change name in correct version of .desktop file

2008-12-02  Graham Cobb  <g+770@cobb.uk.net>
